-- comments have to be entire lines, not suffixes
name:                mtlexample
version:             0.1.0.0
synopsis:            Demos of Monad Transformers
description:         Please see README.md
homepage:            https://github.com/githubuser/mtlexample#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


Executable mtlexample
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  -- If you add more stuff to build-depends, you have to restart stack ghci
  build-depends:
    base >= 4.7 && < 5,
    mtl,
    transformers,
    filepath,
    directory,
    text,
    monad-loops

  ghc-options:
    -- USE -Wall to SHOW ALL WARNINGS:
    -Wall
    --  INSTEAD OF DOING -Wall -Werror, do $ stack build --file-watch --pedantic  although it is very irritating to have every warning be escalated to a (blocking) error

--    -Wall -Werror

  other-modules:
    CountEntries



